--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,7 +27,7 @@ jobs:
         # shell: bash
         # env:
         #   CUSTOM_ENV_VAR: ${{ env.CUSTOM_ENV_VAR }}
-        run: echo "$GITHUB_CONTEXT"
+        run: echo "${{ env }}"
 
       - name: Print the var
         shell: bash
