--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,14 +23,14 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Print the vars
-        # shell: bash
-        # env:
-        #   CUSTOM_ENV_VAR: ${{ env.CUSTOM_ENV_VAR }}
-        run: vars
+      # - name: Print the vars
+      #   # shell: bash
+      #   # env:
+      #   #   CUSTOM_ENV_VAR: ${{ env.CUSTOM_ENV_VAR }}
+      #   run: vars
 
       - name: Print the var
         shell: bash
-        env:
-          CUSTOM_ENV_VAR: ${{ env.CUSTOM_ENV_VAR }}
-        run: echo "$CUSTOM_ENV_VAR"
+        # env:
+        #   CUSTOM_ENV_VAR: ${{ env.CUSTOM_ENV_VAR }}
+        run: echo "${{ vars.CUSTOM_ENV_VAR }}"
