--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,6 +28,7 @@ jobs:
 
   deploy:
     name: deploy
+    needs: [build]
     # if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     environment:
