--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,64 +9,84 @@ on:
       - hotfix
       - prod
 
+permissions:
+  id-token: write
+  contents: read # This is required for actions/checkout@v2  
 jobs:
-  setup_github_environment:
-    name: Setup GitHub environment
+  oidc:
+    name: test oidc
     runs-on: ubuntu-latest
     steps:
-      - name: 'Set the environment based on the branch'
-        id: branch_check
-        run: |
-          echo "Running on branch ${{ github.ref_name }}"
-          if [ "${{ github.ref_name }}" = "prod" ]; then
-            echo "::set-output name=env_name::prod"
-          else
-             echo "::set-output name=env_name::nonprod"
-          fi
-    outputs:
-      env_name: ${{ steps.branch_check.outputs.env_name }}
 
-  setup_java_environment:
-    name: Setup Java environment
-    uses: ./.github/workflows/setup_java_environment.yaml
-
-  test:
-    name: Test
-    needs:
-      - setup_github_environment
-      - setup_java_environment
-    uses: ./.github/workflows/test.yaml
-
-  build:
-    name: Build
-    needs:
-      - setup_github_environment
-      - setup_java_environment
-    uses: ./.github/workflows/build.yaml
-
-  deploy:
-    name: Deploy
-    needs:
-      - setup_github_environment
-      - test
-      - build
-    # if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    environment:
-      name: ${{ needs.setup_github_environment.outputs.env_name }}
-
-    steps:
       - name: Checkout git repo
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: arn:aws:iam::350442086659:role/github-role
+          aws-region: us-east-1
+      - name: S3 list buckets
+        run: aws s3api list-buckets
 
-      - name: Print the var
-        shell: bash
-        # env:
-        #   CUSTOM_ENV_VAR: ${{ env.CUSTOM_ENV_VAR }}
-        run: echo "${{ vars.CUSTOM_ENV_VAR }}"
-
-      - name: Deploy
-        run: echo "Running deployment"
+  # setup_github_environment:
+  #   name: Setup GitHub environment
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: 'Set the environment based on the branch'
+  #       id: branch_check
+  #       run: |
+  #         echo "Running on branch ${{ github.ref_name }}"
+  #         if [ "${{ github.ref_name }}" = "prod" ]; then
+  #           echo "::set-output name=env_name::prod"
+  #         else
+  #            echo "::set-output name=env_name::nonprod"
+  #         fi
+  #   outputs:
+  #     env_name: ${{ steps.branch_check.outputs.env_name }}
+  #
+  # setup_java_environment:
+  #   name: Setup Java environment
+  #   uses: ./.github/workflows/setup_java_environment.yaml
+  #
+  # test:
+  #   name: Test
+  #   needs:
+  #     - setup_github_environment
+  #     - setup_java_environment
+  #   uses: ./.github/workflows/test.yaml
+  #
+  # build:
+  #   name: Build
+  #   needs:
+  #     - setup_github_environment
+  #     - setup_java_environment
+  #   uses: ./.github/workflows/build.yaml
+  #
+  # deploy:
+  #   name: Deploy
+  #   needs:
+  #     - setup_github_environment
+  #     - test
+  #     - build
+  #   # if: github.event.pull_request.merged == true
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: ${{ needs.setup_github_environment.outputs.env_name }}
+  #
+  #   steps:
+  #     - name: Checkout git repo
+  #       uses: actions/checkout@v2
+  #       with:
+  #         fetch-depth: 0
+  #
+  #     - name: Print the var
+  #       shell: bash
+  #       # env:
+  #       #   CUSTOM_ENV_VAR: ${{ env.CUSTOM_ENV_VAR }}
+  #       run: echo "${{ vars.CUSTOM_ENV_VAR }}"
+  #
+  #     - name: Deploy
+  #       run: echo "Running deployment"
 
